--- a/plugin.xml
+++ b/plugin.xml
@@ -9,9 +9,11 @@ id="org.apache.cordova.core">
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/cordova/plugins">
-            <plugin name="Camera" value="org.apache.cordova.core.CameraLauncher"/>
+            <plugin name="Contacts" value="org.apache.cordova.core.ContactManager"/>
         </config-file>
 
-        <source-file src="CameraLauncher.java" target-dir="org/apache/cordova/core" />
+       <source-file src="ContactAccessor.java" target-dir="org/apache/cordova/core" />
+        <source-file src="ContactAccessorSdk5.java" target-dir="org/apache/cordova/core" />
+        <source-file src="ContactManager.java" target-dir="org/apache/cordova/core" />
        </platform>
 </plugin>
