--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+<plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android"
 id="org.apache.cordova.core.contacts">
     version="0.1.0">
@@ -74,4 +74,16 @@ id="org.apache.cordova.core.contacts">
         <header-file src="src/ios/CDVContact.h" />
         <source-file src="src/ios/CDVContact.m" />          
     </platform>
+
+    <!-- wp7 -->
+    <platform name="wp7">
+        <config-file target="config.xml" parent="/*">
+            <feature name="Console">
+                <param name="wp-package" value="Contacts"/>
+            </feature>
+        </config-file>
+
+        <source-file src="src/wp7/Contacts.cs" /> 
+    </platform>
+
 </plugin>
