[CB-3680] - fixed up plugin.xml for android and references

--- a/plugin.xml
+++ b/plugin.xml
@@ -44,10 +44,16 @@ id="org.apache.cordova.core.contacts">
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Contacts">
-                <param name="android-package" value="org.apache.cordova.core.contacts.ContactManager"/>
+                <param name="android-package" value="org.apache.cordova.core.ContactManager"/>
             </feature>
         </config-file>
-
+        
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.READ_CONTACTS" />
+            <uses-permission android:name="android.permission.WRITE_CONTACTS" />  
+            <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+        </config-file>
+        
         <source-file src="src/android/ContactAccessor.java" target-dir="src/org/apache/cordova/core" />
         <source-file src="src/android/ContactAccessorSdk5.java" target-dir="src/org/apache/cordova/core" />
         <source-file src="src/android/ContactManager.java" target-dir="src/org/apache/cordova/core" />
