--- a/plugin.xml
+++ b/plugin.xml
@@ -112,7 +112,22 @@ id="org.apache.cordova.core.contacts">
             <Capability Name="ID_CAP_CONTACTS" />
         </config-file>
 
-        <source-file src="src/wp7/Contacts.cs" /> 
+        <source-file src="src/wp7/Contacts.cs" />
+    </platform>
+
+    <!-- wp8 -->
+    <platform name="wp8">
+        <config-file target="config.xml" parent="/*">
+            <feature name="Contacts">
+                <param name="wp-package" value="Contacts"/>
+            </feature>
+        </config-file>
+
+        <config-file target="Properties/WMAppManifest.xml" parent="/Deployment/App/Capabilities">
+            <Capability Name="ID_CAP_CONTACTS" />
+        </config-file>
+
+        <source-file src="src/wp8/Contacts.cs" />
     </platform>
 
 </plugin>
