[CB-4362] Contacts plugin needs to specify AddressBook.framework and AddressBookUI.framework dependency in plugin.xml

--- a/plugin.xml
+++ b/plugin.xml
@@ -80,6 +80,9 @@
         <source-file src="src/ios/CDVContacts.m" />
         <header-file src="src/ios/CDVContact.h" />
         <source-file src="src/ios/CDVContact.m" />
+        
+        <framework src="AddressBook.framework" weak="true" />
+        <framework src="AddressBookUI.framework" weak="true" />
     </platform>
 
     <!-- blackberry10 -->
