--- a/plugin.xml
+++ b/plugin.xml
@@ -83,6 +83,7 @@
         
         <framework src="AddressBook.framework" weak="true" />
         <framework src="AddressBookUI.framework" weak="true" />
+        <framework src="CoreGraphics.framework" />
     </platform>
 
     <!-- blackberry10 -->
