--- a/plugin.xml
+++ b/plugin.xml
@@ -2,14 +2,13 @@
 
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
-xmlns:android="http://schemas.android.com/apk/res/android"
-           id="org.apache.cordova.core.contacts"
-      version="0.1.0">
-    <name>Contacts</name>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    id="org.apache.cordova.core.contacts"
+    version="0.1.0">
+    <name>contacts</name>
     <description>Cordova Contacts Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,contacts</keywords>
-
 
     <js-module src="www/contacts.js" name="contacts">
         <clobbers target="navigator.contacts" />
