--- a/plugin.xml
+++ b/plugin.xml
@@ -4,6 +4,9 @@
            id="org.apache.cordova.core.contacts"
       version="0.1.0">
     <name>Contacts</name>
+    <description>Cordova Contacts Plugin</description>
+    <license>Apache</license>
+    <keywords>cordova,contacts</keywords>
 
 
     <js-module src="www/contacts.js" name="contacts">
