[CB-4417] Move cordova-plugin-contacts to its own Java package.

--- a/plugin.xml
+++ b/plugin.xml
@@ -50,7 +50,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Contacts">
-                <param name="android-package" value="org.apache.cordova.core.ContactManager"/>
+                <param name="android-package" value="org.apache.cordova.contacts.ContactManager"/>
             </feature>
         </config-file>
 
@@ -60,9 +60,9 @@
             <uses-permission android:name="android.permission.GET_ACCOUNTS" />
         </config-file>
 
-        <source-file src="src/android/ContactAccessor.java" target-dir="src/org/apache/cordova/core" />
-        <source-file src="src/android/ContactAccessorSdk5.java" target-dir="src/org/apache/cordova/core" />
-        <source-file src="src/android/ContactManager.java" target-dir="src/org/apache/cordova/core" />
+        <source-file src="src/android/ContactAccessor.java" target-dir="src/org/apache/cordova/contacts" />
+        <source-file src="src/android/ContactAccessorSdk5.java" target-dir="src/org/apache/cordova/contacts" />
+        <source-file src="src/android/ContactManager.java" target-dir="src/org/apache/cordova/contacts" />
     </platform>
 
     <!-- ios -->
