--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
       version="0.1.0">
     <name>Contacts</name>
     <description>Cordova Contacts Plugin</description>
-    <license>Apache</license>
+    <license>Apache 2.0</license>
     <keywords>cordova,contacts</keywords>
 
 
