--- a/plugin.xml
+++ b/plugin.xml
@@ -73,11 +73,11 @@
             </feature>
         </config-file>
 
-        <js-module src="www/ios/contacts.js" name="contacts">
+        <js-module src="www/ios/contacts.js" name="contacts-ios">
             <merges target="navigator.contacts" />
         </js-module>
 
-        <js-module src="www/ios/Contact.js" name="Contact">
+        <js-module src="www/ios/Contact.js" name="Contact-iOS">
             <merges target="Contact" />
         </js-module>
 
@@ -85,7 +85,7 @@
         <source-file src="src/ios/CDVContacts.m" />
         <header-file src="src/ios/CDVContact.h" />
         <source-file src="src/ios/CDVContact.m" />
-        
+
         <framework src="AddressBook.framework" weak="true" />
         <framework src="AddressBookUI.framework" weak="true" />
         <framework src="CoreGraphics.framework" />
