--- a/plugin.xml
+++ b/plugin.xml
@@ -3,8 +3,8 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="org.apache.cordova.core.contacts"
-    version="0.2.2-dev">
+    id="org.apache.cordova.contacts"
+    version="0.2.2">
 
     <name>Contacts</name>
     <description>Cordova Contacts Plugin</description>
