--- a/plugin.xml
+++ b/plugin.xml
@@ -10,6 +10,8 @@
     <description>Cordova Contacts Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,contacts</keywords>
+    <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-contacts.git</repo>
+    <issue>https://issues.apache.org/jira/browse/CB/component/12320652</issue>
 
     <js-module src="www/contacts.js" name="contacts">
         <clobbers target="navigator.contacts" />
