--- a/plugin.xml
+++ b/plugin.xml
@@ -4,19 +4,17 @@
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="org.apache.cordova.contacts"
-    version="0.2.5">
+    version="0.2.3">
 
     <name>Contacts</name>
     <description>Cordova Contacts Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,contacts</keywords>
-    <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-contacts.git</repo>
-    <issue>https://issues.apache.org/jira/browse/CB/component/12320652</issue>
 
     <js-module src="www/contacts.js" name="contacts">
         <clobbers target="navigator.contacts" />
     </js-module>
-
+    
     <js-module src="www/Contact.js" name="Contact">
         <clobbers target="Contact" />
     </js-module>
@@ -43,6 +41,9 @@
 
     <js-module src="www/ContactOrganization.js" name="ContactOrganization">
         <clobbers target="ContactOrganization" />
+    </js-module>
+
+    <js-module src="test/tests.js" name="tests">
     </js-module>
 
 
