CB-6086 Fix typo in ffos part of plugin.xml: Camera -> Contacts

--- a/plugin.xml
+++ b/plugin.xml
@@ -180,7 +180,7 @@
     <!-- firefoxos -->
     <platform name="firefoxos">
         <config-file target="config.xml" parent="/*">
-            <feature name="Camera">
+            <feature name="Contacts">
                 <param name="firefoxos-package" value="Contacts" />
             </feature>
         </config-file>                                         
