CB-1291 Windows8 Adding contact picker apis

--- a/plugin.xml
+++ b/plugin.xml
@@ -187,6 +187,11 @@
         <js-module src="src/firefoxos/ContactsProxy.js" name="ContactsProxy">
             <runs />
         </js-module>
-    </platform>    
+    </platform>  
+
+        <!-- wp8 -->
+    <js-module src="src/windows8/ContactProxy.js" name="ContactProxy">
+        <merges target="" />
+    </js-module>
 
 </plugin>
