Add pickContact functionality to cordova contacts plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -45,8 +45,9 @@
         <clobbers target="ContactOrganization" />
     </js-module>
 
-
-
+    <js-module src="www/ContactFieldType.js" name="ContactFieldType">
+            <merge target="" />
+    </js-module>
 
     <!-- android -->
     <platform name="android">
@@ -65,6 +66,7 @@
         <source-file src="src/android/ContactAccessor.java" target-dir="src/org/apache/cordova/contacts" />
         <source-file src="src/android/ContactAccessorSdk5.java" target-dir="src/org/apache/cordova/contacts" />
         <source-file src="src/android/ContactManager.java" target-dir="src/org/apache/cordova/contacts" />
+        <source-file src="src/android/ContactInfoDTO.java" target-dir="src/org/apache/cordova/contacts" />
     </platform>
 
     <!-- amazon-fireos -->
@@ -160,6 +162,7 @@
         </config-file>
 
         <source-file src="src/wp/Contacts.cs" />
+        <source-file src="src/wp/ContactsHelper.cs" />
     </platform>
 
     <!-- wp8 -->
@@ -175,6 +178,10 @@
         </config-file>
 
         <source-file src="src/wp/Contacts.cs" />
+        <source-file src="src/wp/ContactsHelper.cs" />
+        <source-file src="src/wp/ContactPicker.xaml" />
+        <source-file src="src/wp/ContactPicker.xaml.cs" />
+        <source-file src="src/wp/ContactPickerTask.cs" />
     </platform>
     
     <!-- firefoxos -->
@@ -187,11 +194,13 @@
         <js-module src="src/firefoxos/ContactsProxy.js" name="ContactsProxy">
             <runs />
         </js-module>
-    </platform>  
+    </platform>    
 
-        <!-- wp8 -->
-    <js-module src="src/windows8/ContactProxy.js" name="ContactProxy">
-        <merges target="" />
-    </js-module>
+    <!-- Windows 8 -->
+    <platform name="windows8">
+        <js-module src="src/windows8/ContactProxy.js" name="ContactProxy">
+            <merges target="" />
+        </js-module>
+    </platform>
 
 </plugin>
