CB-6682 move windows8 command proxy into it's missing platform tag. This closes #30

--- a/plugin.xml
+++ b/plugin.xml
@@ -207,9 +207,11 @@
         </js-module>
     </platform>  
 
-        <!-- wp8 -->
-    <js-module src="src/windows8/ContactProxy.js" name="ContactProxy">
-        <merges target="" />
-    </js-module>
+    <!-- windows8 -->
+    <platform name="windows8">
+        <js-module src="src/windows8/ContactProxy.js" name="ContactProxy">
+            <merges target="" />
+        </js-module>
+    </platform>
 
 </plugin>
