CB-7290 Adds support for universal Windows platform.

--- a/plugin.xml
+++ b/plugin.xml
@@ -220,4 +220,11 @@
         </js-module>
     </platform>
 
+    <!-- Windows -->
+    <platform name="windows">
+        <js-module src="src/windows/ContactProxy.js" name="ContactProxy">
+            <merges target="" />
+        </js-module>
+    </platform>
+
 </plugin>
