CB-7357 Adds missing 'capability' element to phone's appxmanifest.

--- a/plugin.xml
+++ b/plugin.xml
@@ -225,6 +225,9 @@
         <js-module src="src/windows/ContactProxy.js" name="ContactProxy">
             <merges target="" />
         </js-module>
+        <config-file target="package.phone.appxmanifest" parent="/Package/Capabilities">
+            <m3:Capability Name="contacts" />
+        </config-file>
     </platform>
 
 </plugin>
