CB-7523 Fixing "ContactFieldType" error in the config.xml
github: close #45

--- a/plugin.xml
+++ b/plugin.xml
@@ -64,7 +64,7 @@
     </js-module>
 
     <js-module src="www/ContactFieldType.js" name="ContactFieldType">
-            <merge target="" />
+        <merges target="" />
     </js-module>
 
     <!-- android -->
