--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="org.apache.cordova.contacts"
-    version="0.2.15-dev">
+    version="0.2.15">
 
     <name>Contacts</name>
     <description>Cordova Contacts Plugin</description>
