Revert "CB-8683 changed plugin-id to pacakge-name"
This reverts commit 2985ec160602244e479421b3fde68dcdd7f12352.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.17-dev",
   "description": "Cordova Contacts Plugin",
   "cordova": {
-    "id": "cordova-plugin-contacts",
+    "id": "org.apache.cordova.contacts",
     "platforms": [
       "android",
       "amazon-fireos",
