--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="cordova-plugin-contacts"
-    version="1.0.0">
+    version="1.0.1-dev">
 
     <name>Contacts</name>
     <description>Cordova Contacts Plugin</description>
