CB-9192 Updated version and RELEASENOTES.md for release 1.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-contacts",
-  "version": "1.0.1-dev",
+  "version": "1.1.0",
   "description": "Cordova Contacts Plugin",
   "cordova": {
     "id": "cordova-plugin-contacts",
