--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git-wip-us.apache.org/repos/asf/cordova-plugin-contacts.git"
+    "url": "https://github.com/apache/cordova-plugin-contacts"
   },
   "keywords": [
     "cordova",
