--- a/plugin.xml
+++ b/plugin.xml
@@ -31,6 +31,10 @@
     <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-contacts.git</repo>
     <issue>https://issues.apache.org/jira/browse/CB/component/12320652</issue>
 
+    <engines>
+      <engine name="cordova-android" version=">=5.0.0-dev" />
+    </engines>
+
     <js-module src="www/contacts.js" name="contacts">
         <clobbers target="navigator.contacts" />
     </js-module>
