CB-8115 incorrect birthday saved to phonebook using Contacts Plugin
Convert birthday to Date when picking a contact
Added a corresponding test for find method

--- a/plugin.xml
+++ b/plugin.xml
@@ -41,6 +41,9 @@
         <clobbers target="Contact" />
     </js-module>
 
+    <js-module src="www/convertUtils.js" name="convertUtils">
+    </js-module>
+
     <js-module src="www/ContactAddress.js" name="ContactAddress">
         <clobbers target="ContactAddress" />
     </js-module>
