--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-contacts",
-  "version": "2.0.2-dev",
+  "version": "2.1.0",
   "description": "Cordova Contacts Plugin",
   "cordova": {
     "id": "cordova-plugin-contacts",
