Added mandatory iOS 10 privacy description
Since iOS 6 Apple provided a way to show the user why a certain permission is required. In iOS 10 this becomes mandatory, so any app not specifying the key will crash at runtime when a permissions is requested.

This plugin relies requests the Contacts permission, so at the very least we need to add `NSContactsUsageDescription` to the `plist`.

Note that this is the same approach as the Geolocation plugin has taken a while ago.

--- a/plugin.xml
+++ b/plugin.xml
@@ -132,6 +132,10 @@
             </feature>
         </config-file>
 
+        <config-file target="*-Info.plist" parent="NSContactsUsageDescription">
+            <string></string>
+        </config-file>
+
         <js-module src="www/ios/contacts.js" name="contacts-ios">
             <merges target="navigator.contacts" />
         </js-module>
