--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cordova-plugin-contacts",
   "version": "2.2.2-dev",
   "description": "Cordova Contacts Plugin",
+  "types": "./types/index.d.ts",
   "cordova": {
     "id": "cordova-plugin-contacts",
     "platforms": [
