--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/apache/cordova-plugin-contacts"
   },
   "bugs": {
-    "url": "https://github.com/apache/cordova-website/issues"
+    "url": "https://issues.apache.org/jira/browse/CB"
   },
   "keywords": [
     "cordova",
