--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,7 @@
     xmlns:m3="http://schemas.microsoft.com/appx/2014/manifest"
     xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10"
     id="cordova-plugin-contacts"
-    version="2.3.2-dev">
+    version="3.0.0-dev">
 
     <name>Contacts</name>
     <description>Cordova Contacts Plugin</description>
@@ -33,7 +33,9 @@
     <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-contacts.git</repo>
     <issue>https://issues.apache.org/jira/browse/CB/component/12320652</issue>
 
-    <dependency id="cordova-plugin-compat" version="^1.0.0" />
+    <engines>
+        <engine name="cordova-android" version=">=6.3.0" />
+    </engines>
 
     <js-module src="www/contacts.js" name="contacts">
         <clobbers target="navigator.contacts" />
