--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "cordovaDependencies": {
       "3.0.0": {
         "cordova-android": ">=6.3.0"
+      },
+      "4.0.0": {
+        "cordova": ">100"
       }
     }
   },
