CB-13681 Updated version and RELEASENOTES.md for release 3.0.1 (via coho)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-contacts",
-  "version": "3.0.1-dev",
+  "version": "3.0.1",
   "description": "Cordova Contacts Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
