chore: updates .gitignore file

--- a/os-appium-tests/.gitignore
+++ b/os-appium-tests/.gitignore
@@ -37,6 +37,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+allure-results/
 
 # TypeScript v1 declaration files
 typings/
@@ -52,6 +53,7 @@ typings/
 
 # Output of 'npm pack'
 *.tgz
+*.zip
 
 # Yarn Integrity file
 .yarn-integrity
