--- a/os-appium-tests/.gitignore
+++ b/os-appium-tests/.gitignore
@@ -37,7 +37,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-allure-results/
+os-appium-tests/allure-results/
 
 # TypeScript v1 declaration files
 typings/
