--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,11 +12,13 @@ image:
   - Visual Studio 2017
 
 environment:
-  nodejs_version: "4"
   matrix:
-    - PLATFORM: windows-10-store
+    - nodejs_version: "10"
+    - nodejs_version: "12"
+    - nodejs_version: "14"
 
 install:
+  - ps: Install-Product node $env:nodejs_version
   - npm cache clean -f
   - node --version
   - npm install -g cordova-paramedic@https://github.com/apache/cordova-paramedic.git
@@ -25,4 +27,4 @@ install:
 build: off
 
 test_script:
-  - cordova-paramedic --config pr\%PLATFORM% --plugin . --justBuild
+  - cordova-paramedic --config pr\windows-10-store --plugin . --justBuild
